--- a/post/2020-12-09-new-blog-post.Rmd
+++ b/post/2020-12-09-new-blog-post.Rmd
@@ -12,7 +12,7 @@ description: ''
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-You ever wish you had the best of both worlds? Well now you cam with reticulate! R Studio and Python are both excellent softwares and often concieved as rivals. If you ask anyone in the data science field, they either say they are Team R Studio or Team Python. Why can't they be Team Both? With reticulate, now you can! If those in Team R Studio are unfamilar with Python, Python can pretty much complete the same tasks as R Studio. Here are some comparison in codes that would be inputted in both softwares to complete the the same tasks: 
+You ever wish you had the best of both worlds? Well now you can with reticulate! R Studio and Python are both excellent softwares and often concieved as rivals. If you ask anyone in the data science field, they either say they are Team R Studio or Team Python. Why can't they be Team Both? With reticulate, now you can! If those in Team R Studio are unfamilar with Python, Python can pretty much complete the same tasks as R Studio. Here are some comparison in codes that would be inputted in both softwares to complete the the same tasks: 
 
 Let's first input the dataset used in Project 2! 
 
@@ -68,6 +68,8 @@ print(austin)
 ```{python}
 print(r.austin,austin)
 ```
+
+There you go! Communication! The softwares communicate so well that different words can be named the same thing without any issues! 
 
 <center>
 ![](/img/happyh.jpg)
